remove right top text

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
             <span class="icon-bar"></span>
           </button>
           <!--MODIFY title of web page, and link destination if desired-->
-          <a class='navbar-brand' href='index.html'>Search-and-Filter Map Template with 2 layers</a>
+          <a class='navbar-brand' href='index.html'>Housing Mobility Map</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--MODIFY link and text to point to your own site if desired-->
-            <li class='active'><a href="http://epress.trincoll.edu/dataviz" target="_blank">Learn more from free DataViz book at Trinity College CT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
