--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </noscript>
           <div id='map_canvas'></div>
           <!--MODIFY link to publicly display your Google Fusion Tables data table, source, and text-->
-          <p>View <a href='https://www.google.com/fusiontables/DataSource?docid=1p3HtGOMZpCYHwwbZPLPGo6rMZ7TO8w_TYA-3wjzg' target='blank'>data source</a> from <a href='http://smartchoices.trincoll.edu' target='_blank'>SmartChoices</a> -- Visualization based on <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Searchable Map Template</a> by <a href='http://derekeder.com' target='_blank'>Derek Eder</a></p>
+          <p><a href='https://www.google.com/' target='blank'>Data sources</a> (to do) -- Map template by <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Derek Eder</a> and <a href='http://commons.trincoll.edu/dataviz' target='_blank'>DataViz Trinity College</a></p>
         </div>
       </div>
     </div>
