--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Download and modify <a href="https://github.com/JackDougherty/FusionTable-Map-2-layers" target="_blank">template code from GitHub</a><br>Based on <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Searchable Map Template</a> by <a href='http://derekeder.com'>Derek Eder</a><br>Draws data from <a href='http://support.google.com/fusiontables/answer/2571232?hl=en&ref_topic=1652595' target='_blank'>Google Fusion Tables</a></p>
+          <p>Housing Mobility Map created by <a href="http://www.google.com" target="_blank">Insert OCA web address</a>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
