--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Housing Mobility Map created by <a href="http://www.google.com" target="_blank">Insert OCA web address</a>
+          <p>Housing Mobility Map by <a href="http://www.google.com" target="_blank">Open Communities Alliance</a></br>(to do: insert web address)</p>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
