--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             
             <!--MODIFY Point layer legend heading, labels (such as Interdistrict), and colors (green, blue, yellow, red, purple) to match your data -->
             <h4>
-              Point layer
+              Points of interest
             </h4>
             <ul class='inputs-list unstyled'>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType1' />
                   <span class='filter-box filter-green'></span>
-                  Interdistrict schools  <!--This label can be modified from actual data entry ("Interdistrict") -->
+                  Grocery stores <!--This label can be modified from actual data entry ("Interdistrict") -->
                 </label>
               </li>
               <li>
