--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType2' />
                   <span class='filter-box filter-blue'></span>
-                  District schools
+                  Public schools
                 </label>
               </li>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType3' />
                   <span class='filter-box filter-yellow'></span>
-                  More PreK centers
+                  Early childhood
                 </label>
               </li>
             </ul>
