--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             
             <!--MODIFY Point layer legend heading, labels (such as Interdistrict), and colors (green, blue, yellow, red, purple) to match your data -->
             <h4>
-              Points of interest
+              Neighborhood assets
             </h4>
             <ul class='inputs-list unstyled'>
               <li>
