--- a/index.html
+++ b/index.html
@@ -86,7 +86,31 @@
                 </label>
               </li>
             </ul>
-           
+            <h4>
+            <!--MODIFY Polygon layers legend heading, labels (such as Polygon layer 1) to match your data, and related variables in maps_lib.js file -->
+              Polygon layers
+            </h4>
+            <ul class='inputs-list unstyled'>
+              <li>
+                <label class='radio inline'>
+                  <input type='radio' name='types' id='rbPolygon1' checked />
+                  Polygon layer 1
+                </label>
+              </li>
+              <li>
+                <label class='radio inline'>
+                  <input type='radio' name='types' id='rbPolygon2' />
+                  Polygon layer 2
+                </label>
+              </li>
+              <li>
+                <label class='radio inline'>
+                  <input type='radio' name='types' id='rbPolygon0' />
+                  Off
+                </label>
+              </li>
+            </ul>
+            <br />
             <a class='btn btn-primary' id='search' href='#'>
               <i class='glyphicon glyphicon-search'></i>
               Search
