--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <li>
                 <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygon1' checked />
-                  Polygon layer 1
+                  Higher Opportunity = darker color
                 </label>
               </li>
             </ul>
