--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </noscript>
           <div id='map_canvas'></div>
           <!--MODIFY link to publicly display your Google Fusion Tables data table, source, and text-->
-          <p><a href='https://www.google.com/' target='blank'>Data sources</a> (to do) -- Map template by <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Derek Eder</a> and <a href='http://commons.trincoll.edu/dataviz' target='_blank'>DataViz Trinity College</a> code available <a href='https://github.com/JackDougherty/housing-mobility-map' target='_blank'>on GitHub</a></p>
+          <p><a href='https://docs.google.com/document/d/1JFcjhczH22kOsOHtm16YbIUGLdJDLH7ijbL_zqAILYw/edit' target='blank'>About data sources</a> -- Map template by <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Derek Eder</a> and <a href='http://commons.trincoll.edu/dataviz' target='_blank'>DataViz Trinity College</a> - code available <a href='https://github.com/JackDougherty/housing-mobility-map' target='_blank'>on GitHub</a></p>
         </div>
       </div>
     </div>
