--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
             </ul>
             <h4>
             <!--MODIFY Polygon layers legend heading, labels (such as Polygon layer 1) to match your data, and related variables in maps_lib.js file -->
-              Higher opportunity (darker color)
+              Census tracts
             </h4>
             <ul class='inputs-list unstyled'>
               <li>
                 <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygon1' checked />
+                  Higher opportunity = darker shading
                 </label>
               </li>
             </ul>
