--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
           </button>
           <!--MODIFY title of web page, and link destination if desired-->
-          <a class='navbar-brand' href='index.html'>Housing Mobility Map</a>
+          <a class='navbar-brand' href='index.html'>Housing Mobility Map (Beta)</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -38,7 +38,7 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Housing Mobility Map by <a href="http://www.ctoca.org" target="_blank">Open Communities Alliance</a></br>Please enter address of apartment or home you are considering to find areas of higher opportunity and neighborhood assets.</p>
+          <p>beta version by <a href="http://www.ctoca.org" target="_blank">Open Communities Alliance</a></br>Please enter the address of an apartment or home you are considering to find areas of higher opportunity and neighborhood assets.</br>Incomplete data includes only Hartford info on grocery stores and early childhood facilities.</p>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
