--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Please enter the address of an apartment or home you are considering to find areas of higher opportunity and neighborhood assets.</br>-Incomplete data includes only Hartford info on grocery stores and early childhood facilities.</br>-Created by <a href="http://www.ctoca.org" target="_blank">Open Communities Alliance</a> at <a href='http://www.ctbigdebate.org/hackathon.html' target='_blank'>CT Mirror Inequality Hackathon 2014</a></p>
+          <p>Please enter the address of an apartment or home you are considering to find areas of higher opportunity and neighborhood assets.</br>-Incomplete data includes only Hartford info on grocery stores and early childhood facilities.</br>-Created at <a href='http://www.ctbigdebate.org/hackathon.html' target='_blank'>CT Mirror Inequality Hackathon 2014</a> for the <a href="http://www.ctoca.org" target="_blank">Open Communities Alliance</a> to assist housing mobility counselors. Learn more.</p>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
