--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
           </button>
           <!--MODIFY title of web page, and link destination if desired-->
-          <a class='navbar-brand' href='index.html'>Housing Mobility Map (Beta)</a>
+          <a class='navbar-brand' href='index.html'>Housing Mobility Map (beta)</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -90,14 +90,9 @@
             <!--MODIFY Polygon layers legend heading, labels (such as Polygon layer 1) to match your data, and related variables in maps_lib.js file -->
               Census tracts
             </h4>
-            <ul class='inputs-list unstyled'>
-              <li>
-                <label class='radio inline'>
-                  <input type='radio' name='types' id='rbPolygon1' checked />
+                  <input type='radio' name='types' class='hidden' id='rbPolygon1' checked /> <!--hides Polygon1 label -->
                   Higher opportunity = darker shading
-                </label>
-              </li>
-            </ul>
+
             <br />
             <a class='btn btn-primary' id='search' href='#'>
               <i class='glyphicon glyphicon-search'></i>
