inserted label class

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
             <!--MODIFY Polygon layers legend heading, labels (such as Polygon layer 1) to match your data, and related variables in maps_lib.js file -->
               Census tracts
             </h4>
+              <label class='checkbox inline'>
                   <input type='radio' name='types' class='hidden' id='rbPolygon1' checked /> <!--hides Polygon1 label -->
                   Higher opportunity = darker shading
-
+              </label>
             <br />
             <a class='btn btn-primary' id='search' href='#'>
               <i class='glyphicon glyphicon-search'></i>
